--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*__pycache__
 *.py[cod]
 *$py.class
 *.pyc
 
+*.cache-
 /.cache-
 /__pycache__
 
@@ -112,3 +113,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+credentials.py
